log/build_2022-02-09_16-44-11/cv_basics/stderr.log
  File "/home/halvor/dev_ws/install/cv_basics/lib/python3.8/site-packages/cv_basics/helper.py", line 16
    import .model_optimal
           ^
SyntaxError: invalid syntax

